--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@
 .idea
 .vscode
 ###< IDE ###
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
