--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /public/bundles/
 /var/
 /vendor/
+node_modules
 ###< symfony/framework-bundle ###
 
 ###> phpunit/phpunit ###
@@ -18,3 +19,9 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> Other ###
+yarn.lock
+composer.lock
+package-lock.json
+###< Other ###
